--- a/angular.json
+++ b/angular.json
@@ -80,9 +80,15 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/aos/dist/aos.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/jquery/dist/jquery.slim.js",
+              
+              "node_modules/bootstrap/dist/js/bootstrap.js",
+              "node_modules/aos/dist/aos.js"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
